--- a/index.html
+++ b/index.html
@@ -193,9 +193,9 @@
         </div>
         <div class="project-content">
           <h3><a href="/project/equityengine">EquityEngine: A Pathway to Inclusive and Personalized Engineering Education</a></h3>
-          <p>EquityEngine is a multi-phase research initiative aimed at making the educational
-            experience in engineering fields more inclusive, accessible, and personalized for SLWD,
-            particularly those with attention-related disorders, in post-secondary education. By
+          <p>EquityEngine is a multi-phase research initiative aimed at enhancing the educational experience
+            for engineering students, particularly those with attention disorders such as Attention-Deficit/
+            Hyperactivity Disorder (ADHD), in post-secondary education. By
             leveraging the transformative potential of artificial intelligence (AI) and adopting a
             participatory design approach, the research seeks to augment learning accessibility and
             provide tailored support through a multifunctional AI-driven platform, bridging the gap
