--- a/project/equityengine/index.html
+++ b/project/equityengine/index.html
@@ -36,15 +36,12 @@
       </div>-->
 
       <p style="margin-top: 40px;">
-        The underrepresentation of Students Living with Disabilities (SLWD) in engineering fields
-        highlights a critical educational equity gap. This gap necessitates fundamental changes within
-        academia to not only addresses accessibility but also embraces the full spectrum of student
-        diversity to truly close the equity gap. Current research underscores the effectiveness of
-        personalized learning strategies, which consistently lead to improved learning outcomes and
-        increased student engagement, diversity, and inclusion. However, our systematic literature
-        review reveals a pronounced scarcity of AI-driven learning tools developed specifically for
-        post-secondary STEM education. The majority of existing tools are designed primarily for
-        K-12 students, overlooking the distinct, more advanced challenges faced by SLWD in higher education.
+        EquityEngine is a multi-phase research initiative aimed at enhancing the educational experience
+        for engineering students, particularly those with attention disorders such as Attention-Deficit/
+        Hyperactivity Disorder (ADHD), in post-secondary education. By leveraging the transformative
+        potential of artificial intelligence (AI) and adopting a participatory design approach, this
+        research focuses on developing a multifunctional AI-driven platform that provide tailored
+        support and enhances focus, motivation, self-agency, and educational outcomes for engineering students.
       </p>
 
       <!--<img style="margin-top: 20px;" src="/img/equityengineRA.png" alt="TBD">-->
@@ -54,19 +51,66 @@
         <p>
           Three core pillars of our research: Accessibility, Engineering Education, and Artificial
           ntelligence. By intersecting these areas, we aim to create a more inclusive and engaging
-          learning environment for college students living with disabilities in engineering programs,
-          and more broadly, across STEM disciplines.. The overlapping region represents the synergy
-          where all three pillars converge, driving the development of tailored, AI-driven solutions
-          that enhance both educational outcomes and equity for SLWD.
+          learning environment for college students in engineering programs, and more broadly, across
+          STEM disciplines.. The overlapping region represents the synergy where all three pillars
+          converge, driving the development of tailored, AI-driven solutions that enhance both educational
+          outcomes and mental-welling.
         </p>
       </div>
 
-      <!--<h3 class="title">How Does It Work?</h3>
+      <h3 class="title">Background and Motivation</h3>
+      <div class="image-text-container">
+        <img src="/img/RG1.png" alt="Image 1" class="image-50">
+        <div class="text-50">
+          <p>
+            Existing literatures reveals a pronounced scarcity of AI-driven learning tools developed specifically
+            \for post-secondary STEM education. The majority of existing tools are designed primarily for K-12
+            students, overlooking the distinct, more advanced challenges faced by SLWD in higher education.
+          </p>
+        </div>
+      </div>
       <p>
 
-      </p>-->
+      </p>
 
-      <h3 class="title">Key Milestones</h3>
+      <h3 class="title">Targeted Population</h3>
+      <p>
+        ADHD is the most common condition associated with attention disorders, affecting 21.8% of the
+        SLWD population and up to 13.8% of college students reported in Spring 2024. In addition,
+        students with major depressive disorder also face substantial concentration challenges.
+        Besides those with formal diagnoses, maintaining focus and motivation has been a common
+        challenge among post-secondary engineering students.
+
+      </p>
+
+      <h3 class="title">Methodology</h3>
+      <p>
+
+      </p>
+
+      <h3 class="title">Proposed Solution</h3>
+      <img src="/img/psdow_ee.png" alt="TBD">
+      <p>
+        Three-dimensional real-time data will be measured to guide our Adaptive Intervention Module:
+      </p>
+        <ul style="line-height: 1.5;">
+          <li>
+            Physiological Signals (e.g., heart-rate, eye-tracking);
+          </li>
+          <li>
+            Behavioral Signals (e.g., click frequency, tab-switching, facial expression);
+          </li>
+          <li>
+            Contextual Signals (e.g., assignment difficulty, pop-up responses).
+          </li>
+        </ul>
+       <p>
+        Based on these real-time measures, the system will generate an Engagement Index. This index is
+        then fed into a tiered decision logic that determines the interventions (e.g., micro-prompts,
+        task adjustment, contextual re-engagement).
+      </p>
+
+      <!--<h3 class="title">Key Milestones</h3>
       <ul style="line-height: 1.5;">
         <li>
           Phase 1: Literature Review: Identify existing research gaps, particularly in AI-driven tools
@@ -107,7 +151,7 @@
       </ul>
       <p>
 
-      </p>
+      </p>-->
 
       <!--<h3 class="title">Iterative Design and Key Insights</h3>
       <p>
