--- a/project/equityengine/index.html
+++ b/project/equityengine/index.html
@@ -84,8 +84,22 @@
       </p>
 
       <h3 class="title">Methodology</h3>
+      <div class="image-text-container">
+        <img src="/img/mixmethod.png" alt="Image 1" class="image-50">
+        <div class="text-50">
+          <p>
+            The mixed-methods approach serves as the primary strategy guiding our user studies,
+            helping us understand user needs and establishing the foundation for our co-design sessions.
+          </p>
+        </div>
+      </div>
       <p>
-
+        Iterative design and participatory design will be the main methodologies guiding our design process.
+        We will use co-design sessions to identify evidence-based design principles together with our targeted
+        users and educators. Subsequently, we will create a low-fidelity paper prototype based on these
+        principles and utilize heuristic evaluation alongside usability testing to gather comprehensive
+        feedback and insights from our participants. This feedback will be used to refine the paper prototype
+        before the next iteration of the design.
       </p>
 
       <h3 class="title">Proposed Solution</h3>
