--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                 <span>📄</span>
                 <p>Kevin Shao, et al. (2025). <strong>Bridging Educational Equity Gaps: A Systematic Review of AI-Driven and New Technologies for Students Living with Disabilities in STEM Education.</strong> ASEE CoNECD (Collaborative Network for Engineering and Computing Diversity) 2025.</p>
                 <div class="links">
-                    <a href="https://peer.asee.org/bridging-educational-equity-gaps-a-systematic-review-of-ai-driven-and-new-technologies-for-students-living-with-disabilities-in-stem-education">PDF</a>
+                    <a href="https://peer.asee.org/54075">PDF</a>
                     <a>Cite (COMING SOON, available in Feb 2025)</a>
                     <!--<a href="#">DOI</a>-->
                 </div>
