--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <p class="university"><a href="https://www.ece.uw.edu/">University of Washington</p>
             <div class="social-icons">
               <!--<a href="https://twitter.com/YourTwitterHandle" target="_blank" class="icon twitter" aria-label="Twitter"></a>-->
-              <!--<a href="https://scholar.google.com/citations?user=YourGoogleScholarID" target="_blank" class="icon google-scholar" aria-label="Google Scholar"></a>-->
+              <a href="https://scholar.google.com/citations?hl=en&user=vo3NUfsAAAAJ" target="_blank" class="icon google-scholar" aria-label="Google Scholar"></a>
               <!--<a href="https://github.com/YourGitHubUsername" target="_blank" class="icon github" aria-label="GitHub"></a>-->
               <a href="https://www.linkedin.com/in/kevin-shao918/" target="_blank" class="icon linkedin" aria-label="LinkedIn"></a>
               <!--<a href="https://www.facebook.com/YourFacebookProfile" target="_blank" class="icon facebook" aria-label="Facebook"></a>-->
